--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,6 @@
 body{
     overflow-y: scroll;
     width:100vw;
-    color: white;
     box-sizing:border-box;
     justify-content: center;
     font-family: a;
@@ -72,10 +71,6 @@ section{
     background-color:white;
 }
 
-#threeD .imagecontainer{
-    box-shadow: 0px 0px 90px rgba(0,0,0,0.1);
-}
-
 #frontEnd{
     background-color: rgba(0,0,0,0.1);
 }
@@ -101,10 +96,13 @@ section{
     font-family: compote;
     font-size: clamp(1.5rem, 5vw, 3rem);
     transition: all 200ms ease-out;
+    color: #fff;
 
 }
 
 .nav{
+    display: inline-flex;
+    gap: 5px;
     list-style: none;
     margin:0;
     padding:0;
@@ -125,29 +123,25 @@ section{
 }
 
 .sidescroll{
+    display: flex;
     scroll-snap-type: x mandatory;
-    overflow-x: scroll;
+    overflow-x: auto;
     white-space: nowrap;
+    height: 100vh;
+   align-items: center;
 }
 
 .imagecontainer{
-    display: inline-block;
-    height:70vh;
-    width:auto;
-    box-sizing: border-box;
-    margin: 2rem;
-    background-color: #fff;
-    white-space: normal;
-    position:relative;
-    top:50%;
-    transform: translate(0, -50%);
+    height: 70vh;
+    width: fit-content;
+    margin: 1rem;
     scroll-snap-align: center;
-    
 }
 
 img{
-    max-height:70vh;
-    width: auto;
+    max-height:100%;
+    max-width:auto;
+    
 }
 
 #wb{
@@ -156,4 +150,18 @@ img{
     animation: 20s rotate linear infinite;
     -webkit-animation: 20s rotate linear infinite;
     background-color: #000;
+}
+
+.info{
+    display: flex;
+    background-color: #fff;
+    height: 70vh;
+    min-width: 20vw;
+    white-space: normal;
+    scroll-snap-align: center;
+}
+
+.number{
+    font-size: 10vw;
+    margin: 1rem;
 }
